<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/os_item_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    tools:ignore="MissingDefaultResource">

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginLeft="8dp"

        android:text="@string/_30"
        android:textColor="@color/white"
        android:textSize="@dimen/text30sp"
        app:layout_constraintEnd_toEndOf="@+id/textView32"
        app:layout_constraintStart_toStartOf="@+id/textView32"
        app:layout_constraintTop_toBottomOf="@+id/textView32" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rainy"
        android:textColor="@color/white"
        android:textSize="@dimen/text10sp"
        app:layout_constraintEnd_toEndOf="@+id/textView40"
        app:layout_constraintStart_toStartOf="@+id/textView40"
        app:layout_constraintTop_toBottomOf="@+id/textView40" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/july_13"
        android:textColor="#FFF"
        android:textSize="@dimen/text12sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toEndOf="@+id/textView32"
        app:layout_constraintTop_toTopOf="@+id/textView30" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_27"
        android:textColor="@color/white"
        android:textSize="@dimen/text20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView42"
        app:layout_constraintStart_toStartOf="@+id/textView42"
        app:layout_constraintTop_toBottomOf="@+id/textView42" />

    <TextView
        android:id="@+id/textView51"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rainy"
        android:textColor="#FFF"
        android:textSize="@dimen/text10sp"
        app:layout_constraintEnd_toEndOf="@+id/textView53"
        app:layout_constraintStart_toStartOf="@+id/textView53"
        app:layout_constraintTop_toBottomOf="@+id/textView53" />

    <TextView
        android:id="@+id/textView52"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"

        android:gravity="center"
        android:text="@string/july_14"
        android:textColor="#FFF"
        android:textSize="@dimen/text12sp"
        app:layout_constraintStart_toEndOf="@+id/textView42"
        app:layout_constraintTop_toTopOf="@+id/textView42" />

    <TextView
        android:id="@+id/textView53"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_29"
        android:textColor="@color/white"
        android:textSize="@dimen/text20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView52"
        app:layout_constraintStart_toStartOf="@+id/textView52"
        app:layout_constraintTop_toBottomOf="@+id/textView52" />

    <TextView
        android:id="@+id/textView62"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"

        android:gravity="center"
        android:text="@string/july_15"
        android:textColor="@color/white"
        android:textSize="@dimen/text15sp"
        app:layout_constraintStart_toEndOf="@+id/textView52"
        app:layout_constraintTop_toTopOf="@+id/textView52" />

    <TextView
        android:id="@+id/textView63"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_28"
        android:textColor="@color/white"
        android:textSize="@dimen/text20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView62"
        app:layout_constraintStart_toStartOf="@+id/textView62"
        app:layout_constraintTop_toBottomOf="@+id/textView62" />

    <TextView
        android:id="@+id/textView61"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clearly"
        android:textColor="@color/white"
        android:textSize="@dimen/text10sp"
        app:layout_constraintEnd_toEndOf="@+id/textView63"
        app:layout_constraintStart_toStartOf="@+id/textView63"
        app:layout_constraintTop_toBottomOf="@+id/textView63" />


    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clearly"
        android:textColor="#FFF"
        android:textSize="@dimen/text10sp"
        app:layout_constraintEnd_toEndOf="@+id/textView30"
        app:layout_constraintStart_toStartOf="@+id/textView30"
        app:layout_constraintTop_toBottomOf="@+id/textView30" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:text="@string/iasi"
        android:textColor="@color/white"
        android:textSize="@dimen/text20sp"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="@+id/textView11"
        android:layout_marginLeft="8dp" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="35dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="@+id/textView51"
        app:layout_constraintEnd_toEndOf="@+id/textView11"
        app:layout_constraintStart_toEndOf="@+id/textView63"
        app:layout_constraintTop_toTopOf="@+id/textView11"
        app:srcCompat="@android:drawable/ic_menu_delete" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintGuide_begin="173dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="308dp"
        android:layout_height="89dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/outline"
        android:textSize="@dimen/text10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />



</android.support.constraint.ConstraintLayout>